[project]
name = "claude-code-telegram-bot-integrade-perplexity-sanitize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.20.0",
    "anyio==4.12.1",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "python-dotenv==1.0.1",
    "python-telegram-bot==21.6",
    "requests==2.32.4",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
]
